--- a/src/components/styles/creator/Snewhome/Topbanner.css
+++ b/src/components/styles/creator/Snewhome/Topbanner.css
@@ -1,13 +1,36 @@
-.new_home_top_banner{
-    position: relative;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
+.new_home_top_banner {
+  position: relative;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
 }
-.new_home_top_banner_img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+.new_home_top_banner_img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.tixteen_icon_new_div {
+  position: absolute;
+  left: 5%;
+  top: 5%;
+}
+.tixteen_join_infu_button {
+  background-color: var(--dark-yellow-color);
+  color: var(--black-color);
+  padding: 10px 20px;
+  border-radius: 13px;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s ease;
+  font-family: var(--josefin-font);
+  text-transform: uppercase;
+  font-weight: 600;
+}
+.tixteen_join_infu_button_div {
+  position: absolute;
+  right: 5%;
+  top: 5%;
 }
